# selfie-desktop

./: README.md  camera_diagnostic.py  debug_camera.py  pubspec.yaml  pyproject.toml  requirements.txt
android/app/: build.gradle.kts
flutter_selfie_booth/: pubspec.yaml
flutter_selfie_booth/src/: main.dart
flutter_selfie_booth/src/models/: event.dart
flutter_selfie_booth/src/screens/: camera_screen.dart  camera_settings_screen.dart  event_details_screen.dart  event_list_screen.dart  experience_select_screen.dart  login_screen.dart
flutter_selfie_booth/src/services/: api_service.dart  auth_service.dart
flutter_selfie_booth/src/utils/: app_theme.dart  constants.dart
flutter_selfie_booth/src/widgets/: top_bar.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/events/: events_page.dart
lib/models/: selfie_image.dart
lib/screens/: camera_screen.dart
lib/utils/: camera_utils.dart
lib/widgets/: camera_controls.dart  captured_images.dart  filter_selector.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
python_booth/: Info.plist  README.md  test_camera.py
src/: __init__.py  main.py
src/components/: topbar.py
src/controllers/: camera_controller.py
src/utils/: api_client.py  ios_permissions.py
src/views/: __init__.py  camera_test.py  event_details.py  login.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: .gitignore  CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+9 files in other folders)
