[project]
name = "selfie-booth"
version = "0.1.0"
description = "SelfieBooth application for event photography"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "SelfieBooth Team", email = "info@selfiebooth.com" }
]
dependencies = [
  "flet>=0.28.0",
  "httpx>=0.24.1",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
  "python-dotenv>=1.0.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.selfiebooth"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "SelfieBooth"

# company name to display in about app dialogs
company = "SelfieBooth"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by SelfieBooth Team"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]>=0.28.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = ">=0.28.0"}